--- a/cascade.css
+++ b/cascade.css
@@ -1,6 +1,6 @@
 h1 {
-	font-size: 180%;
-	font-weight: small-caps;
+	font-size: 150%;
+	font-weight: normall;
 }
 p {
 	color: purple;
@@ -11,8 +11,6 @@ p footer {
 .fun {
 	color: green;
 }
-body footer {
-	color: red;
 }
 footer footer {
 	color: blue;
