--- a/box.css
+++ b/box.css
@@ -9,7 +9,7 @@
 .box-b {
 	background-color: Green;
 	padding: 45px;
-	border: 20px orange;
+	border: 3px solid black;
 	width: 250px;
 	height: 150px;
 }
