updating borders on box.css

--- a/box.css
+++ b/box.css
@@ -9,7 +9,7 @@
 .box-b {
 	background-color: Green;
 	padding: 45px;
-	border: 30px solid black;
+	border: 30px orange;
 	width: 250px;
 	height: 150px;
 }
