--- a/box.css
+++ b/box.css
@@ -5,7 +5,7 @@
 	margin-bottom: 20px;
 	width: 250px;
 	height: 150px;
-	box-sizing: border box;
+	box-sizing: border-box;
 }
 .box-b {
 	background-color: Green;
