--- a/floats.css
+++ b/floats.css
@@ -1,3 +1,9 @@
+h1 {
+	color: orange;
+	font-size: 120%;
+	font-weight: normal;
+}
+
 .container {
 	width: 940px;
 	margin-left: auto;
@@ -18,6 +24,10 @@
 	width: 34%;
 	float: left;
 }
+
+.fix {
+	clear:both;
+	{
 
 .group:before,
 .group:after,{
